log/build_2024-04-22_18-01-34/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target command_publisher[0m
[35m[1mScanning dependencies of target state_publisher[0m
[ 50%] [32mBuilding CXX object CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o[0m
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:61:38: error: ‘Int64’ is not a member of ‘std_msgs::msg’
   61 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                      ^~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:61:43: error: template argument 1 is invalid
   61 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                           ^
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:61:46: error: expected ‘;’ at end of member declaration
   61 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                              ^~~~~~~~~
      |                                                       ;
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:61:56: error: ‘publisher’ does not name a type
   61 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                                        ^~~~~~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:63:2: error: expected ‘;’ after class definition
   63 | }
      |  ^
      |  ;
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp: In constructor ‘CommandPublisher::CommandPublisher()’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:10:9: error: ‘publisher’ was not declared in this scope
   10 |         publisher = this->create_publisher<std_msgs::msg::Int16>("/cmd_direction", 10);
      |         ^~~~~~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:33:41: error: expected ‘;’ before ‘publisher’
   33 |                             cmd.data = 0
      |                                         ^
      |                                         ;
   34 |                             publisher->publisher(cmd);
      |                             ~~~~~~~~~    
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:38:41: error: expected ‘;’ before ‘publisher’
   38 |                             cmd.data = 1
      |                                         ^
      |                                         ;
   39 |                             publisher->publisher(cmd);
      |                             ~~~~~~~~~    
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:43:41: error: expected ‘;’ before ‘publisher’
   43 |                             cmd.data = 2
      |                                         ^
      |                                         ;
   44 |                             publisher->publisher(cmd);
      |                             ~~~~~~~~~    
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:48:41: error: expected ‘;’ before ‘publisher’
   48 |                             cmd.data = 3
      |                                         ^
      |                                         ;
   49 |                             publisher->publisher(cmd);
      |                             ~~~~~~~~~    
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:22:13: warning: unused variable ‘i’ [-Wunused-variable]
   22 |         int i = 0;
      |             ^
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp: In function ‘int main(int, char**)’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:66:18: error: ‘agrc’ was not declared in this scope; did you mean ‘argc’?
   66 |     rclcpp::init(agrc, argv);
      |                  ^~~~
      |                  argc
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:65:14: warning: unused parameter ‘argc’ [-Wunused-parameter]
   65 | int main(int argc, char* argv[]) {
      |          ~~~~^~~~
make[2]: *** [CMakeFiles/command_publisher.dir/build.make:63: CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/command_publisher.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 75%] [32m[1mLinking CXX executable state_publisher[0m
[ 75%] Built target state_publisher
make: *** [Makefile:141: all] Error 2
